--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
             font-family: 'Poppins', sans-serif;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: #fff;
-            height: 100%;
-            overflow: hidden;
+            min-height: 100vh;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
 
         .loader {
@@ -52,20 +53,20 @@
         }
 
         .container {
-            max-width: 800px;
+            max-width: 90%;
             margin: 0 auto;
-            padding: 2rem;
+            padding: 2rem 1rem;
             text-align: center;
         }
 
         h1 {
-            font-size: 3rem;
+            font-size: 2.5rem;
             margin-bottom: 1rem;
             animation: fadeInDown 1s ease-out;
         }
 
         p {
-            font-size: 1.2rem;
+            font-size: 1rem;
             line-height: 1.6;
             margin-bottom: 2rem;
             animation: fadeIn 1s ease-out 0.5s both;
@@ -81,6 +82,7 @@
             font-weight: 600;
             transition: transform 0.3s ease;
             animation: fadeIn 1s ease-out 1s both;
+            margin-bottom: 1rem;
         }
 
         .btn:hover {
@@ -90,13 +92,14 @@
         .tech-stack {
             display: flex;
             justify-content: center;
+            flex-wrap: wrap;
             gap: 2rem;
             margin-top: 3rem;
             animation: fadeIn 1s ease-out 1.5s both;
         }
 
         .tech-icon {
-            font-size: 3rem;
+            font-size: 2.5rem;
             transition: transform 0.3s ease;
         }
 
@@ -117,6 +120,25 @@
             to {
                 opacity: 1;
                 transform: translateY(0);
+            }
+        }
+
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 2rem;
+            }
+
+            p {
+                font-size: 0.9rem;
+            }
+
+            .btn {
+                padding: 0.6rem 1.2rem;
+                font-size: 0.9rem;
+            }
+
+            .tech-icon {
+                font-size: 2rem;
             }
         }
     </style>
